# with-anybar

./: .travis.yml  Makefile  README.md  release.nix  result  shell.nix  with-anybar.cabal  with-anybar.nix
src/: Main.hs
src/Utils/: AnyBar.hs  Awaitable.hs  Network.hs  Shell.hs
src/WithAnyBar/: App.hs  Blink.hs  Types.hs
