cabal-version: 2.4
name: with-anybar
version: 1.0.0
license: BSD-3-Clause
build-type: Simple

executable wab
    build-depends: base < 5
                 , mtl
                 , containers
                 , bytestring
                 , text
                 , process
                 , directory
                 , network
    other-modules: Utils.Shell
                 , Utils.AnyBar
                 , Utils.Network
                 , Utils.Awaitable
                 , WithAnyBar.Types
                 , WithAnyBar.App
                 , WithAnyBar.Blink
    main-is: Main.hs
    hs-source-dirs: src
    ghc-options: -O3 -threaded
    default-language: Haskell2010
